# dotfiles

./: .Xresources  .agenix.toml  .clang-format  .envrc  .gitattributes  .gitignore  .gitmodules  .guix-authorizations  .guix-channel  .profile  .sops.yaml  .xinitrc  Babar.bttpreset  Brewfile  Makefile  README.org  baba.scm  build.sh  config.yml  configuration.blits.nix  configuration.mane.nix  configuration.sollys.nix  default.nix  editorconfig  env.nix  flake.nix  gitconfig  gitignore  iso.sh  network.nix  notes.org  overlays.nix  pkglist.txt  profile  rcrc  readme.org  setup.sh  skhdrc  switch.sh  tmux.conf  (+4 more)
.bin/: IosevkaConfigGen.hs  backup  batmon.sh  clang-format-setup  clip  compile  display  dmenu  dmenu_mpc  launch_lemonbar  launch_polybar  launcher  lock  mirrors  open  pscircle-wall.sh  screenshot  sway  volume  wscreen
.cargo/: config
.doom.d/: config.el  init.el  packages.el
.elvish/: rc.elv
.emacs.d/: .gitignore  .lsp-session-v1  bookmarks  check.el  company.el  completion.el  dart.el  direnv.el  evil.el  feature.el  fish.el  flycheck.el  git.el  go.el  init.el  ivy.el  keys.el  kotlin.el  lsp.el  markdown.el  navigation.el  org.el  projectile.el  recentf  rust.el  snippets.el  terraform.el  ui.el  yaml.el  yas.el
.xres/: ayu_mirage  gruvbox  night_owl  palenight  rofi  st  urxvt  xft  xst
.zsh/: aliases  function  history  plugins  prompt  prompt.go  rc  theme  vim
_setup/: macos.sh
_system/: NOTE.adoc  macos.sh
cargo/: .crates.toml
etc/xmonad/: amethyst.cabal  default.nix  shell.nix  stack.yaml  xmonad.hs
etc/xmonad/nix/: sources.json
(+769 files in other folders)
